seekList is treeMap again; fix issues with offest in seeklist and encoding (\!)