@@ -4,26 +4,25 @@ import gnu.trove.list.TLongList;
 import gnu.trove.list.array.TLongArrayList;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.TreeMap;
 
-public class SeekList
+public class SeekList extends TreeMap<String, Long>
 {
-    private List<String> wordVector;
-    private TLongList offsetVector;
-
     public static SeekList createFromFile(String filename) {
         SeekList seekList = new SeekList();
-        FileReader fileReader;
+        BufferedReader bufferedReader;
 
         //open file
         try {
-            fileReader = new FileReader(filename);
+            bufferedReader = new BufferedReader(new InputStreamReader(new FileInputStream(filename), StandardCharsets.UTF_8));
         } catch (FileNotFoundException e) {
             System.out.println("cannot open seekList file - it probably does not exist");
             return null;
         }
-        BufferedReader bufferedReader = new BufferedReader(fileReader);
 
         // read each line; parse offest and word; add them to map
         String line;
@@ -34,7 +33,7 @@ public class SeekList
                 // line has format "12offset34 word"
                 try {
                     splitted = line.split(" ", 2);
-                    seekList.put(splitted[1], Long.valueOf(splitted[0]));
+                    seekList.put(splitted[1], new Long(splitted[0]));
                 } catch (ArrayIndexOutOfBoundsException e) {
                     System.out.print("splitting failed for: ");
                     System.out.println(line);
@@ -48,53 +47,11 @@ public class SeekList
 
         // close file
         try {
-            fileReader.close();
+            bufferedReader.close();
         } catch (IOException e) {
             System.out.println("Cannot close seekList file... anyway.");
         }
 
         return seekList;
-    }
-
-
-    public SeekList()
-    {
-        this.wordVector = new ArrayList<String>();
-        this.offsetVector = new TLongArrayList();
-    }
-
-    public void put(String word, long offset)
-    {
-        this.wordVector.add(word);
-        this.offsetVector.add(offset);
-    }
-
-    public long getOffsetFor(String word)
-    {
-        int index = this.findNearestWordIndex(word);
-        return offsetVector.get(index);
-    }
-
-    private int findNearestWordIndex(String word)
-    {
-        int lower = 0;
-        int upper = wordVector.size();
-        int current;
-        String cur_word;
-        int compared;
-        // binary search
-        do {
-            current = (upper - lower) / 2 + lower;
-            cur_word = wordVector.get(current);
-            compared = word.compareTo(cur_word);
-            if (compared == 0) {
-                return current;
-            } else if (compared < 0) {
-                upper = current - 1;
-            } else {
-                lower = current;
-            }
-        } while ((upper - lower) > 1);
-        return lower;
     }
 }
